--- a/app/src/main/res/layout/activity_lockapp_activity.xml
+++ b/app/src/main/res/layout/activity_lockapp_activity.xml
@@ -13,10 +13,10 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="13dp"
-        android:fontFamily="serif-monospace"
+        android:fontFamily="@font/megrim"
         android:text="Locked apps"
         android:textAllCaps="true"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorAccent"
         android:textSize="20sp"
         android:textStyle="bold">
 
