data on badge section

--- a/app/src/main/res/layout/activity_badge.xml
+++ b/app/src/main/res/layout/activity_badge.xml
@@ -36,7 +36,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="55dp"
             android:layout_marginRight="55dp"
-            android:fontFamily="@font/megrim"
+            android:fontFamily="sans-serif-medium"
             android:gravity="center"
             android:text="Golden Bridge \n 2,737 m"
             android:textAllCaps="false"
@@ -75,7 +75,7 @@
             android:layout_marginStart="55dp"
             android:layout_marginLeft="55dp"
             android:layout_marginTop="8dp"
-            android:fontFamily="@font/megrim"
+            android:fontFamily="sans-serif-medium"
             android:gravity="center"
             android:text="Bahamas \n 1,070 m"
             android:textColor="@color/colorPrimaryDark"
@@ -101,7 +101,7 @@
             android:layout_marginStart="55dp"
             android:layout_marginLeft="55dp"
             android:layout_marginTop="8dp"
-            android:fontFamily="@font/megrim"
+            android:fontFamily="sans-serif-medium"
             android:gravity="center"
             android:text="Route66 \n 3,940 km"
             android:textColor="@color/colorPrimaryDark"
@@ -127,7 +127,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="55dp"
             android:layout_marginRight="55dp"
-            android:fontFamily="@font/megrim"
+            android:fontFamily="sans-serif-medium"
             android:gravity="center"
             android:text="K2 \n 8,611 km"
             android:textColor="@color/colorPrimaryDark"
@@ -153,7 +153,7 @@
             android:layout_marginStart="55dp"
             android:layout_marginLeft="55dp"
             android:layout_marginTop="8dp"
-            android:fontFamily="@font/megrim"
+            android:fontFamily="sans-serif-medium"
             android:gravity="center"
             android:text="Niagara Falls \n 11,399 km"
             android:textColor="@color/colorPrimaryDark"
@@ -183,15 +183,48 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="55dp"
             android:layout_marginRight="55dp"
-            android:layout_marginBottom="60dp"
-            android:fontFamily="@font/megrim"
+            android:fontFamily="sans-serif-medium"
             android:gravity="center"
             android:text="Sahara \n 15,940 km"
             android:textColor="@color/colorPrimaryDark"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Sahara" />
+
+        <TextView
+            android:id="@+id/total_steps"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="32dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="Total number of steps: "
+            android:textColor="@color/colorAccent"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Waterfall_text" />
+
+        <TextView
+            android:id="@+id/Total_distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="Distance travelled so far: "
+            android:textColor="@color/colorAccent"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/total_steps"
+            app:layout_constraintVertical_bias="0.0" />
 
 
     </android.support.constraint.ConstraintLayout>
